objects/Post_QBR_Action_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Merit_Index_for_customers__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assginee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assginee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Post_QBR_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>40LP</fullName>
                </value>
                <value>
                    <fullName>55LPe</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>New Technology</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Yield Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion__c</fullName>
        <label>Completion</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merit_Index_for_customers__c</fullName>
        <label>Merit Index for customers</label>
        <referenceTo>Merit__c</referenceTo>
        <relationshipLabel>Post QBR Action Plans</relationshipLabel>
        <relationshipName>Post_QBR_Action_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <label>Results</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>TEXT(Merit_Index_for_customers__r.Site__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Color__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status_In_Color</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_in_colour__c</fullName>
        <formula>IF(ISPICKVAL(Status_Color__c, &apos;RED&apos;), IMAGE(&apos;/resource/RedCustomerSatisfaction&apos;,&apos;Red&apos;),
   IF(ISPICKVAL(Status_Color__c, &apos;GREEN&apos;), IMAGE(&apos;/resource/GreenCustomerSatisfaction&apos;,&apos;Green&apos;),
      IF(ISPICKVAL(Status_Color__c, &apos;YELLOW&apos;), IMAGE(&apos;/resource/OrangeCustomerSatisfaction&apos;,&apos;Orange&apos;),null)))</formula>
        <label>Status in colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <label>Post QBR Action Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PQBR-{0000}</displayFormat>
        <label>Post QBR Action Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post QBR Action Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assignee_Field_Map_With_Internal_User</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(CONTAINS((Assginee__r.Profile.UserLicense.Name), &quot;Salesforce&quot;),
 CONTAINS((Assginee__r.Profile.UserLicense.Name),       &quot;Company Communities&quot;)
))</errorConditionFormula>
        <errorDisplayField>Assginee__c</errorDisplayField>
        <errorMessage>Assignee field selection only applicable for user type drop down.</errorMessage>
    </validationRules>
</CustomObject>